# globalpay

./: .env  Cargo.toml  Dockerfile  docker-compose.yaml  readme.md
docker-compose/postgres/: Dockerfile  db_init.sql
migrations/2024-07-26-115254_create_table/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs  types.rs  utils.rs
src/api/transaction/: handlers.rs  types.rs
src/api/user/: handlers.rs  types.rs
