[package]
name = "globalpay"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5.0"
diesel = { version = "2.2.0", features = [
    "postgres",
    "r2d2",
    "serde_json",
    "chrono",
    "uuid",
    "postgres_backend",
] }
chrono = { version = "0.4.26", features = ["serde"] }
serde = {version = "1.0.204", features = ["derive"]}
uuid = { version = "1.3.4", features = ["v4", "serde"] }
serde_json = "1.0.1"
jwt = "0.16.0"
sha2 = "0.10.8"
hmac = "0.12.1"
env_logger = "0.10.0"
log = { version = "0.4.20", features = ["kv_unstable_serde"] }
derive_more = "^0.99"
dotenv = "0.15.0"
actix-governor = "0.5.0"
blake3 = "1.5.3"